@@ -46,6 +46,7 @@
   - Clone/BeginClone/CloneAsync methods: Fixing palette color space when creating an exact clone with identical
     pixel format of an indexed bitmap with a different color space.
 * BitmapDataFactory class:
+  + New Load/BeginLoad/LoadAsync overloads with WorkingColorSpace parameter.
   * CreateBitmapData methods: In some overloads some parameters have been made optional.
 * ColorExtensions class:
   + New ToGray overloads with WorkingColorSpace parameter.
